feat: 녹화영상 리스트 로직 수정